name:          example-eta
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.10

library
  hs-source-dirs:     src/main/eta
  exposed-modules:    Example.Transform
  build-depends:      base >= 4.7 && < 5
                    , aeson 
                    , lens-aeson 
                    , lens 
                    , text 
  maven-depends:      com.google.guava:guava:25.0-jre
  default-extensions: OverloadedStrings
  default-language:   Haskell2010

test-suite example-eta-test
  type:               exitcode-stdio-1.0
  main-is:            TransformSpec.hs
  hs-source-dirs:     src/test/eta
  build-depends:      base >= 4.7 && < 5
                    , hspec 
                    , example-eta
  default-language:   Haskell2010
