name:                example
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Example.Transform
  build-depends:       base >=4.11 && <4.12
                     , aeson
                     , lens-aeson
                     , lens
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  maven-depends:       com.google.guava:guava:25.0-jre
